--- a/adventofcode2018.cabal
+++ b/adventofcode2018.cabal
@@ -21,5 +21,6 @@ executable Day01
   hs-source-dirs:      "Day 01 - Chronal Calibration"
   main-is:             Main.hs
   build-depends:       base   >=4.9 && <4.10,
-                       parsec >=3.1 && <3.2
+                       parsec >=3.1 && <3.2,
+                       containers
   default-language:    Haskell2010
