--- a/adventofcode2018.cabal
+++ b/adventofcode2018.cabal
@@ -31,3 +31,11 @@ executable Day02
   build-depends:       base   >=4.9 && <4.10,
                        parsec >=3.1 && <3.2
   default-language:    Haskell2010
+
+executable Day03
+  hs-source-dirs:      "Day 03 - No Matter How You Slice It"
+  main-is:             Main.hs
+  build-depends:       base   >=4.9 && <4.10,
+                       parsec >=3.1 && <3.2,
+                       containers
+  default-language:    Haskell2010
