--- a/adventofcode2018.cabal
+++ b/adventofcode2018.cabal
@@ -12,10 +12,10 @@ cabal-version:       >=1.10
 
 test-suite doctests
   type:                exitcode-stdio-1.0
-  ghc-options:         -threaded
   main-is:             doctest.hs
   build-depends:       base, doctest
   default-language:    Haskell2010
+  ghc-options:         -Wall -threaded
 
 executable Day01
   hs-source-dirs:      "Day 01 - Chronal Calibration"
@@ -24,6 +24,7 @@ executable Day01
                        parsec >=3.1 && <3.2,
                        containers
   default-language:    Haskell2010
+  ghc-options:         -Wall
 
 executable Day02
   hs-source-dirs:      "Day 02 - Inventory Management System"
@@ -31,6 +32,7 @@ executable Day02
   build-depends:       base   >=4.9 && <4.10,
                        parsec >=3.1 && <3.2
   default-language:    Haskell2010
+  ghc-options:         -Wall
 
 executable Day03
   hs-source-dirs:      "Day 03 - No Matter How You Slice It"
@@ -39,3 +41,4 @@ executable Day03
                        parsec >=3.1 && <3.2,
                        containers
   default-language:    Haskell2010
+  ghc-options:         -Wall
