--- a/adventofcode2018.cabal
+++ b/adventofcode2018.cabal
@@ -43,3 +43,12 @@ executable Day03
                        containers
   default-language:    Haskell2010
   ghc-options:         -Wall
+
+executable Day04
+  hs-source-dirs:      "Day 04 - Repose Record"
+  main-is:             Main.hs
+  build-depends:       base >= 4.12 && < 4.13,
+                       parsec >=3.1 && <3.2,
+                       time
+  default-language:    Haskell2010
+  ghc-options:         -Wall
