--- a/adventofcode2018.cabal
+++ b/adventofcode2018.cabal
@@ -52,3 +52,11 @@ executable Day04
                        time
   default-language:    Haskell2010
   ghc-options:         -Wall
+
+executable Day05
+  hs-source-dirs:      "Day 05 - Alchemical Reduction"
+  main-is:             Main.hs
+  build-depends:       base   >=4.12 && <4.13,
+                       parsec >=3.1 && <3.2
+  default-language:    Haskell2010
+  ghc-options:         -Wall
