--- a/adventofcode2018.cabal
+++ b/adventofcode2018.cabal
@@ -57,6 +57,7 @@ executable Day05
   hs-source-dirs:      "Day 05 - Alchemical Reduction"
   main-is:             Main.hs
   build-depends:       base   >=4.12 && <4.13,
-                       parsec >=3.1 && <3.2
+                       parsec >=3.1 && <3.2,
+                       containers
   default-language:    Haskell2010
   ghc-options:         -Wall
