--- a/adventofcode2018.cabal
+++ b/adventofcode2018.cabal
@@ -61,3 +61,12 @@ executable Day05
                        containers
   default-language:    Haskell2010
   ghc-options:         -Wall
+
+executable Day06
+  hs-source-dirs:      "Day 06 - Chronal Coordinates"
+  main-is:             Main.hs
+  build-depends:       base   >=4.12 && <4.13,
+                       parsec >=3.1 && <3.2,
+                       containers
+  default-language:    Haskell2010
+  ghc-options:         -Wall
