--- a/adventofcode2018.cabal
+++ b/adventofcode2018.cabal
@@ -70,3 +70,12 @@ executable Day06
                        containers
   default-language:    Haskell2010
   ghc-options:         -Wall
+
+executable Day07
+  hs-source-dirs:      "Day 07 - The Sum of Its Parts"
+  main-is:             Main.hs
+  build-depends:       base   >=4.12 && <4.13,
+                       parsec >=3.1 && <3.2,
+                       containers
+  default-language:    Haskell2010
+  ghc-options:         -Wall
