Day 8: Memory Maneuver (part 1)

--- a/adventofcode2018.cabal
+++ b/adventofcode2018.cabal
@@ -79,3 +79,11 @@ executable Day07
                        containers
   default-language:    Haskell2010
   ghc-options:         -Wall
+
+executable Day08
+  hs-source-dirs:      "Day 08 - Memory Maneuver"
+  main-is:             Main.hs
+  build-depends:       base   >=4.12 && <4.13,
+                       parsec >=3.1 && <3.2
+  default-language:    Haskell2010
+  ghc-options:         -Wall
