--- a/adventofcode2018.cabal
+++ b/adventofcode2018.cabal
@@ -87,3 +87,12 @@ executable Day08
                        parsec >=3.1 && <3.2
   default-language:    Haskell2010
   ghc-options:         -Wall
+
+executable Day09
+  hs-source-dirs:      "Day 09 - Marble Mania"
+  main-is:             Main.hs
+  build-depends:       base   >=4.12 && <4.13,
+                       parsec >=3.1 && <3.2,
+                       containers
+  default-language:    Haskell2010
+  ghc-options:         -Wall
