--- a/adventofcode2018.cabal
+++ b/adventofcode2018.cabal
@@ -96,3 +96,12 @@ executable Day09
                        containers
   default-language:    Haskell2010
   ghc-options:         -Wall
+
+executable Day10
+  hs-source-dirs:      "Day 10 - The Stars Align"
+  main-is:             Main.hs
+  build-depends:       base   >=4.12 && <4.13,
+                       parsec >=3.1 && <3.2,
+                       containers
+  default-language:    Haskell2010
+  ghc-options:         -Wall
