--- a/adventofcode2018.cabal
+++ b/adventofcode2018.cabal
@@ -105,3 +105,12 @@ executable Day10
                        containers
   default-language:    Haskell2010
   ghc-options:         -Wall
+
+executable Day11
+  hs-source-dirs:      "Day 11 - Chronal Charge"
+  main-is:             Main.hs
+  build-depends:       base   >=4.12 && <4.13,
+                       parsec >=3.1 && <3.2,
+                       containers
+  default-language:    Haskell2010
+  ghc-options:         -Wall
