--- a/adventofcode2018.cabal
+++ b/adventofcode2018.cabal
@@ -132,3 +132,12 @@ executable Day13
                        containers
   default-language:    Haskell2010
   ghc-options:         -Wall
+
+executable Day14
+  hs-source-dirs:      "Day 14 - Chocolate Charts"
+  main-is:             Main.hs
+  build-depends:       base   >=4.12 && <4.13,
+                       parsec >=3.1 && <3.2,
+                       containers
+  default-language:    Haskell2010
+  ghc-options:         -Wall
