--- a/adventofcode2018.cabal
+++ b/adventofcode2018.cabal
@@ -13,7 +13,7 @@ cabal-version:       >=1.10
 test-suite doctests
   type:                exitcode-stdio-1.0
   main-is:             doctest.hs
-  build-depends:       base >= 4.12 && < 4.13,
+  build-depends:       base,
                        doctest
   default-language:    Haskell2010
   ghc-options:         -Wall -threaded
@@ -21,8 +21,8 @@ test-suite doctests
 executable Day01
   hs-source-dirs:      "Day 01 - Chronal Calibration"
   main-is:             Main.hs
-  build-depends:       base >= 4.12 && < 4.13,
-                       parsec >=3.1 && <3.2,
+  build-depends:       base,
+                       parsec,
                        containers
   default-language:    Haskell2010
   ghc-options:         -Wall
@@ -30,16 +30,16 @@ executable Day01
 executable Day02
   hs-source-dirs:      "Day 02 - Inventory Management System"
   main-is:             Main.hs
-  build-depends:       base >= 4.12 && < 4.13,
-                       parsec >=3.1 && <3.2
+  build-depends:       base,
+                       parsec
   default-language:    Haskell2010
   ghc-options:         -Wall
 
 executable Day03
   hs-source-dirs:      "Day 03 - No Matter How You Slice It"
   main-is:             Main.hs
-  build-depends:       base >= 4.12 && < 4.13,
-                       parsec >=3.1 && <3.2,
+  build-depends:       base,
+                       parsec,
                        containers
   default-language:    Haskell2010
   ghc-options:         -Wall
@@ -47,8 +47,8 @@ executable Day03
 executable Day04
   hs-source-dirs:      "Day 04 - Repose Record"
   main-is:             Main.hs
-  build-depends:       base >= 4.12 && < 4.13,
-                       parsec >=3.1 && <3.2,
+  build-depends:       base,
+                       parsec,
                        time
   default-language:    Haskell2010
   ghc-options:         -Wall
@@ -56,8 +56,8 @@ executable Day04
 executable Day05
   hs-source-dirs:      "Day 05 - Alchemical Reduction"
   main-is:             Main.hs
-  build-depends:       base   >=4.12 && <4.13,
-                       parsec >=3.1 && <3.2,
+  build-depends:       base,
+                       parsec,
                        containers
   default-language:    Haskell2010
   ghc-options:         -Wall
@@ -65,8 +65,8 @@ executable Day05
 executable Day06
   hs-source-dirs:      "Day 06 - Chronal Coordinates"
   main-is:             Main.hs
-  build-depends:       base   >=4.12 && <4.13,
-                       parsec >=3.1 && <3.2,
+  build-depends:       base,
+                       parsec,
                        containers
   default-language:    Haskell2010
   ghc-options:         -Wall
@@ -74,8 +74,8 @@ executable Day06
 executable Day07
   hs-source-dirs:      "Day 07 - The Sum of Its Parts"
   main-is:             Main.hs
-  build-depends:       base   >=4.12 && <4.13,
-                       parsec >=3.1 && <3.2,
+  build-depends:       base,
+                       parsec,
                        containers
   default-language:    Haskell2010
   ghc-options:         -Wall
@@ -83,16 +83,16 @@ executable Day07
 executable Day08
   hs-source-dirs:      "Day 08 - Memory Maneuver"
   main-is:             Main.hs
-  build-depends:       base   >=4.12 && <4.13,
-                       parsec >=3.1 && <3.2
+  build-depends:       base,
+                       parsec
   default-language:    Haskell2010
   ghc-options:         -Wall
 
 executable Day09
   hs-source-dirs:      "Day 09 - Marble Mania"
   main-is:             Main.hs
-  build-depends:       base   >=4.12 && <4.13,
-                       parsec >=3.1 && <3.2,
+  build-depends:       base,
+                       parsec,
                        containers
   default-language:    Haskell2010
   ghc-options:         -Wall
@@ -100,8 +100,8 @@ executable Day09
 executable Day10
   hs-source-dirs:      "Day 10 - The Stars Align"
   main-is:             Main.hs
-  build-depends:       base   >=4.12 && <4.13,
-                       parsec >=3.1 && <3.2,
+  build-depends:       base,
+                       parsec,
                        containers
   default-language:    Haskell2010
   ghc-options:         -Wall
@@ -109,8 +109,8 @@ executable Day10
 executable Day11
   hs-source-dirs:      "Day 11 - Chronal Charge"
   main-is:             Main.hs
-  build-depends:       base   >=4.12 && <4.13,
-                       parsec >=3.1 && <3.2,
+  build-depends:       base,
+                       parsec,
                        containers
   default-language:    Haskell2010
   ghc-options:         -Wall
@@ -118,8 +118,8 @@ executable Day11
 executable Day12
   hs-source-dirs:      "Day 12 - Subterranean Sustainability"
   main-is:             Main.hs
-  build-depends:       base   >=4.12 && <4.13,
-                       parsec >=3.1 && <3.2,
+  build-depends:       base,
+                       parsec,
                        containers
   default-language:    Haskell2010
   ghc-options:         -Wall
@@ -127,8 +127,8 @@ executable Day12
 executable Day13
   hs-source-dirs:      "Day 13 - Mine Cart Madness"
   main-is:             Main.hs
-  build-depends:       base   >=4.12 && <4.13,
-                       parsec >=3.1 && <3.2,
+  build-depends:       base,
+                       parsec,
                        containers
   default-language:    Haskell2010
   ghc-options:         -Wall
@@ -136,8 +136,8 @@ executable Day13
 executable Day14
   hs-source-dirs:      "Day 14 - Chocolate Charts"
   main-is:             Main.hs
-  build-depends:       base   >=4.12 && <4.13,
-                       parsec >=3.1 && <3.2,
+  build-depends:       base,
+                       parsec,
                        containers
   default-language:    Haskell2010
   ghc-options:         -Wall
