Day 15: Beverage Bandits (part 1)
attack and path BFS are kind of a mess.

--- a/adventofcode2018.cabal
+++ b/adventofcode2018.cabal
@@ -141,3 +141,12 @@ executable Day14
                        containers
   default-language:    Haskell2010
   ghc-options:         -Wall
+
+executable Day15
+  hs-source-dirs:      "Day 15 - Beverage Bandits"
+  main-is:             Main.hs
+  build-depends:       base,
+                       parsec,
+                       containers
+  default-language:    Haskell2010
+  ghc-options:         -Wall
